# Guitaraoke

./: .gitignore  README.md  audio_handler.py  audio_handling.py  audio_input.py  audio_input_handler.py  audio_load_handler.py  audio_playback.py  audio_stream_handler.py  compare_pitches.py  config.ini  config.py  elecguitar_chromatic_scale_PITCHES.csv  elecguitar_chromatic_scale_PREDS.csv  guitar_separation.py  main.py  main.spec  pitch_detection.py  pitch_plot.py  preload.py  pyproject.toml  save_pitches.py  spectrogram_plot.py  test.py  utils.py  waveform_plot.py
assets/stylesheets/: main.qss
audio_analysis/: note_predictor.py
audio_handling/: audio_load_handler.py  audio_stream_handler.py
audio_separation/: guitar_separator.py
data/: config.ini
note_predictions/elecguitar_chromatic_scale/: elecguitar_chromatic_scale_basic_pitch.csv  elecguitar_chromatic_scale_basic_pitch.mid
plotting/: waveform_plot.py
src/guitaraoke/: __init__.py  audio_input.py  audio_playback.py  audio_streaming.py  compare_pitches.py  playback_controls.py  practice_window.py  preload.py  save_notes.py  save_pitches.py  scoring_system.py  separate_guitar.py  setup_window.py  utils.py  waveform_plot.py
tests/: test_guitar_separation.py  test_pitch_detection.py  test_save_pitches.py  test_separate_guitar.py
tests/integration/: test_save_and_read_notes.py  test_save_and_read_pitches.py
tests/model_tuning/: basic_pitch_parameter_tuning.ipynb
tests/performance/: compare_pitches_performance.py
tests/unit/: test_compare_notes.py  test_compare_pitches.py  test_save_notes.py  (+4 more)
