[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guitaraoke"
version = "0.1"
dependencies = [
    "numpy", 
    "pandas", 
    "PyQt6", 
    "pyqtgraph", 
    "sounddevice", 
    "librosa", 
    "demucs", 
    "torch==2.1.2+cu118",
    "torchaudio==2.1.2+cu118",
    "tensorflow==2.15.0",
    "basic-pitch[tf]", 
    "scipy"
]
requires-python = "==3.11.12"
description = "A guitar karaoke app with real-time performance feedback to help users learn to play new songs."
authors = [{name = "Spike Elliot"}]
license = {text = "MIT"}